@@ -1,11 +1,3 @@
 public class Main {
-    /* todo o prof ta doido, ele quer
-     todo ele quer uma lista dentro de um func. !!
-     todo Desse jeito eu preciso de uma instacia de func. pra
-     todo inicializar uma lista ! Que ideia!*/
-
-
-    Funcionario.Lista listaFunc = new Funcionario.Lista();
-
-
+    Empresa empresa = new Empresa();
 }
